--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                             <a href="https://twitter.com/paulemacedo/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         
+                        <li>
+                            <a href="https://wa.me/5521969079474" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
