--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div id="experience-timeline">
             <div data-date="July 2023 – Now">
                 <h3>RNP</h3>
-                <h4>Fullstack Developer Intern</h4>
+                <h4>Undergrad Reasearcher</h4>
                 <p></p>
                 <ul>
                     <li>
@@ -111,7 +111,8 @@
             <span class="education-date">August 2019 - Now</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p>
-                The Federal Center for Technological Education Celso Suckow da Fonseca (Cefet/RJ) had its origin in 1917 as the Normal School of Arts and Crafts Wenceslau Braz. Currently, it is a federal teaching institution that understands itself as a public space for human, scientific and technological formation.            </p>
+                The Federal Center for Technological Education Celso Suckow da Fonseca (Cefet/RJ) had its origin in 1917 as the Normal School of Arts and Crafts Wenceslau Braz. Currently, it is a federal teaching institution that understands itself as a public space for human, scientific and technological formation.            
+            </p>
         </div>
         <!-- End .education-block -->
 
@@ -159,9 +160,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Capture The Flag</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Laorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -177,9 +178,18 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Python</li>
+            <li>Github</li>
+            <li>Git</li>
+            <li>Linux</li>
+            <li>Bash</li>
+            <li>Kali linux</li>
+            <li>Figma</li>
             <li>Java</li>
             <li>C</li>
             <li>C++</li>
+            <li>lua</li>
+            <li>NCL4</li>
+            <li>Yarn</li>
         </ul>
     </div>
     <!-- End #skills -->
