--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <div data-date="July 2023 – Now">
                 <h3>RNP</h3>
                 <h4>Undergrad Reasearcher</h4>
-                <p></p>
+                <p>Active participation as an undergraduate researcher in a scientific initiation project at the National Education and Research Network (RNP), within the TV 3.0 Project, focusing on the fields of Immersive TV and Virtual Reality. Under the guidance of Professor Débora Christina Muchaluat Saade (UFF) and Professor Joel Andre Ferreira dos Santos (CEFET).</p>
                 <ul>
                     <li>
-                        Designed and implemented Weather prediction Template using <br> [HTML, CSS and JavaScript] & [Lua and NCL4]
+                        Designed and implemented Weather prediction Template for TV using <br> [HTML, CSS and JavaScript] & [Lua and NCL4]
                     </li>
                     <li>
-                        Designed and implemented User log in screen using [C# and Unity3D]
+                        Designed and implemented User log in screen for VR using [C# and Unity3D]
                     </li>
                 </ul>
             </div>
@@ -123,10 +123,10 @@
             <p>Largest open IT education platform in Latin America, with over 1 million users. DIO has partnerships with some of the most innovative companies in the world, providing immersive teaching experiences with a focus on employability. In this context, here are my main certificates:</p><br>            
             <ul>
                 <li>
-                    <a href="https://www.dio.me/certificate/GKFIXUH2/share" target="_blank">Dominando Python e Suas Estruturas de Dados [14h]</a>
+                    <a href="https://www.dio.me/certificate/SVNHI4OA/share" target="_blank">Santander Bootcamp Cibersegurança [53h]</a>
                 </li>
                 <li>
-                    <a href="https://www.dio.me/certificate/NSHBKKB9/share" target="_blank">Fundamentos de Cibersegurança [7h]</a>
+                    <a href="https://www.dio.me/certificate/GKFIXUH2/share" target="_blank">Dominando Python e Suas Estruturas de Dados [14h]</a>
                 </li>
             </ul>
         </div>
