--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Hello! My name is Paule Macedo, and I am an aspiring cybersecurity professional. Currently, I am an undergraduate researcher at the National Education and Research Network (RNP), where I work on the TV 3.0 Project, focusing on immersive TV and virtual reality. I am pursuing a Bachelor's degree in Computer Science at CEFET-RJ, where I have gained a solid foundation in various programming languages and technological tools.
+                    </p><br>
+                    <p>
+                        My interest in cybersecurity has led me to participate in several projects, including the creation of Capture the Flag (CTF) labs and bank simulations in Python. I am always seeking new opportunities to learn and apply my knowledge in digital security. Let's connect and explore how I can contribute to your projects!
                     </p>
                 </div>
             </div>
@@ -86,51 +87,73 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="July 2023 – Now">
+            <div class="experience-block" data-date="July 2023 – Now">
                 <h3>RNP</h3>
-                <h4>Undergrad Reasearcher</h4>
-                <p>Active participation as an undergraduate researcher in a scientific initiation project at the National Education and Research Network (RNP), within the TV 3.0 Project, focusing on the fields of Immersive TV and Virtual Reality. Under the guidance of Professor Débora Christina Muchaluat Saade (UFF) and Professor Joel Andre Ferreira dos Santos (CEFET).</p>
+                <h4>Undergraduate Researcher</h4>
+                <p>Active participant in a scientific initiation project at the National Education and Research Network (RNP), within the TV 3.0 Project, focusing on the fields of Immersive TV and Virtual Reality. Under the guidance of Professor Débora Christina Muchaluat Saade (UFF) and Professor Joel Andre Ferreira dos Santos (CEFET).</p>
                 <ul>
                     <li>
-                        Designed and implemented Weather prediction Template for TV using <br> [HTML, CSS and JavaScript] & [Lua and NCL4]
+                        Designed and implemented a weather prediction template for TV using HTML, CSS, and JavaScript, enhancing the user experience with accurate and dynamic weather updates.
                     </li>
                     <li>
-                        Designed and implemented User log in screen for VR using [C# and Unity3D]
+                        Developed a user login screen for VR applications using C# and Unity3D, improving the authentication process and user interface in virtual environments.
                     </li>
                 </ul>
             </div>
-
-        </div>
+            <!-- End #RNP -->
+        </div>    
     </div>
     <!-- End #experience -->
 
+    
+
     <div id="education">
         <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>CEFET-RJ</h3>
-            <span class="education-date">August 2019 - Now</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                The Federal Center for Technological Education Celso Suckow da Fonseca (Cefet/RJ) had its origin in 1917 as the Normal School of Arts and Crafts Wenceslau Braz. Currently, it is a federal teaching institution that understands itself as a public space for human, scientific and technological formation.            
-            </p>
-        </div>
-        <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>DIO</h3>
-            <span class="education-date">Febr 2024 - Now</span>
+            <h3>CEFET-RJ</h3>
+            <span class="education-date">August 2019 - Present</span>
+            <h4>Bachelor of Science in Computer Science</h4>
+            <p>
+                The Federal Center for Technological Education Celso Suckow da Fonseca (CEFET-RJ) is a federal institution that has been providing education since 1917. Currently, it offers a diverse array of scientific and technological courses. My coursework includes:
+            </p>
+            <ul>
+                <li>Data Structures and Algorithms</li>
+                <li>Operating Systems</li>
+                <li>Computer Networks</li>
+                <li>Software Engineering</li>
+                <li>Database Systems</li>
+            </ul>         
+        </div>
+        <!-- End .education-block -->
+     
+
+        <div class="education-block">
+            <h3>Continuos Learning</h3>
+            <span class="education-date">2024 - Now</span>
             <h4></h4>
-            <p>Largest open IT education platform in Latin America, with over 1 million users. DIO has partnerships with some of the most innovative companies in the world, providing immersive teaching experiences with a focus on employability. In this context, here are my main certificates:</p><br>            
             <ul>
                 <li>
-                    <a href="https://www.dio.me/certificate/SVNHI4OA/share" target="_blank">Santander Bootcamp Cibersegurança [53h]</a>
+                    <a href="#" target="_blank">Hackers do Bem | Senai</a>
+                    <p>Course focusing on ethical hacking and cybersecurity best practices.</p>
                 </li>
                 <li>
-                    <a href="https://www.dio.me/certificate/GKFIXUH2/share" target="_blank">Dominando Python e Suas Estruturas de Dados [14h]</a>
+                    <a href="#" target="_blank">Lei Geral de Proteção de Dados (LGPD) | 2h | Fundação Bradesco</a>
+                    <p>Introduction to Brazil's General Data Protection Law (LGPD) and its implications.</p>
+                </li>
+                <li>
+                    <a href="https://www.dio.me/certificate/SVNHI4OA/share" target="_blank">Santander Bootcamp Cibersegurança | 53h | Dio.me</a>
+                    <p>Comprehensive bootcamp covering various aspects of cybersecurity.</p>
+                </li>
+                <li>
+                    <a href="https://www.dio.me/certificate/GKFIXUH2/share" target="_blank">Dominando Python e Suas Estruturas de Dados | 14h | Dio.me</a>
+                    <p>In-depth course on mastering Python and its data structures.</p>
                 </li>
             </ul>
         </div>
         <!-- End .education-block -->
+
+
     </div>
     <!-- End #education -->
 
@@ -140,15 +163,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/bank.jpg" />
+                        <img src="images/CTF2.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Bank.py</h3>
+                        <h3>Capture the Flag (CTF)</h3>
                         <p>
-                            Simulation of a bank made in python using the OOP paradigm. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. 
+                            Building a comprehensive Capture the Flag (CTF) lab using Kali Linux, Metasploitable, and platforms like TryHackMe and Hack The Box. Gaining proficiency in network scanning, vulnerability exploitation, and privilege escalation to tackle a variety of cybersecurity challenges.
                         </p>
-                        <a href="https://github.com/paulemacedo/sistema-bancario-python">View Project</a>
+                        <a href="https://github.com/paulemacedo/Capture-The-Flag">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -156,15 +179,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/bank.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Capture The Flag</h3>
+                        <h3>Bank Simulation</h3>
                         <p>
-                            Laorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Creating a bank simulation in Python using Object-Oriented Programming (OOP). The project features account management, transaction handling, and client management, simulating realistic banking operations as part of my learning process.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/paulemacedo/sistema-bancario-python">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
