--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paule's Portifolio</title>
+    <title>Paule's Portfolio</title>
+    <meta property="og:title" content="Paule's Portfolio">
+    <meta property="og:description" content="Explore the portfolio of Paule, showcasing projects and skills in web development using React, Vite, and TailwindCSS.">
+    <meta property="og:image" content="assets/Preview.png">
+    <meta property="og:url" content="https://paulemacedo.vercel.app">
+    <meta property="og:type" content="Portfolio">
   </head>
   <body>
     <div id="root"></div>
