--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Paule's Portfolio</title>
     <meta property="og:title" content="Paule's Portfolio">
     <meta property="og:description" content="Explore the portfolio of Paule, showcasing projects and skills in web development using React, Vite, and TailwindCSS.">
-    <meta property="og:image" content="assets/Preview.png">
+    <meta property="og:image" content="./public/og-image.png">
     <meta property="og:url" content="https://paulemacedo.vercel.app">
     <meta property="og:type" content="Portfolio">
   </head>
