fix: update Open Graph description for clarity

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paule's Portfolio</title>
     <meta property="og:title" content="Paule's Portfolio">
-    <meta property="og:description" content="Explore the portfolio of Paule, showcasing projects and skills in web development using React, Vite, and TailwindCSS.">
+    <meta property="og:description" content="Paule Macedo's portfolio website.">
     <meta property="og:image" content="./public/og-image.png">
     <meta property="og:url" content="https://paulemacedo.vercel.app">
     <meta property="og:type" content="Portfolio">
