fix: add Open Graph audio metadata for enhanced sharing experience

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta property="og:description" content="Paule Macedo's portfolio website.">
     <meta property="og:image" content="https://raw.githubusercontent.com/paulemacedo/Portifolio/refs/heads/main/public/og-image.png">
     <meta property="og:image:type" content="image/png">
-
+    <meta property="og:audio" content="https://github.com/paulemacedo/Portifolio/raw/refs/heads/main/public/Crescent-Moon-chosic.com.mp3" />
+    <meta property="og:audio:secure_url" content="https://github.com/paulemacedo/Portifolio/raw/refs/heads/main/public/Crescent-Moon-chosic.com.mp3" />
+    <meta property="og:audio:type" content="audio/mp3" />
     <meta property="og:url" content="https://paulemacedo.vercel.app">
     <meta property="og:type" content="Portfolio">
   </head>
