fix: update Open Graph image path and change button to link for CV download

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Paule's Portfolio</title>
     <meta property="og:title" content="Paule's Portfolio">
     <meta property="og:description" content="Paule Macedo's portfolio website.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/paulemacedo/Portifolio/refs/heads/main/public/og-image.png">
+    <meta property="og:image" content="/og-image.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://paulemacedo.vercel.app">
     <meta property="og:type" content="Portfolio">
