fix: update Twitter card image path for consistency

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Paule's Portfolio">
     <meta name="twitter:description" content="Paule Macedo's portfolio website.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/paulemacedo/Portifolio/refs/heads/main/public/og-image.png">
+    <meta name="twitter:image" content="/og-image.png">
   </head>
   <body>
     <div id="root"></div>
