--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Paule's Portfolio</title>
     <meta property="og:title" content="Paule's Portfolio">
     <meta property="og:description" content="Paule Macedo's portfolio website.">
-    <meta property="og:image" content="/og-image.png">
+    <meta property="og:image" content="https://paulemacedo.vercel.app/og-image.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://paulemacedo.vercel.app">
     <meta property="og:type" content="Portfolio">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Paule's Portfolio">
     <meta name="twitter:description" content="Paule Macedo's portfolio website.">
-    <meta name="twitter:image" content="/og-image.png">
+    <meta name="twitter:image" content="https://paulemacedo.vercel.app/og-image.png">
   </head>
   <body>
     <div id="root"></div>
